crates/loader/tests/ui/invalid-manifest.err
Failed to read Spin app manifest from "<test-dir>/invalid-manifest.toml"

Caused by:
    TOML parse error at line 6, column 4
      |
    6 | ver
      |    ^
    expected `.`, `=`
    